--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div id="header"></div>
+    <div id="header">
+        <h1>Welcome to Etch-a-sketch!</h1>
+    </div>
     <div id="content">
         <div id="menu">
             <button id="changeSize">Change grid size</button>
